--- a/src/BoundedContexts/AdoptionSystem/TheKittySaver.AdoptionSystem.Primitives/TheKittySaver.AdoptionSystem.Primitives.csproj
+++ b/src/BoundedContexts/AdoptionSystem/TheKittySaver.AdoptionSystem.Primitives/TheKittySaver.AdoptionSystem.Primitives.csproj
@@ -12,7 +12,7 @@
     </ItemGroup>
     
     <ItemGroup>
-      <Compile Update="Aggregates\PersonAggregate\AddressId.cs">
+      <Compile Update="Aggregates\PersonAggregate\PolishAddressId.cs">
         <Generator>MSBuild:GenerateCodeFromAttributes</Generator>
       </Compile>
       <Compile Update="Aggregates\PersonAggregate\IdentityId.cs">
