--- a/src/AdoptionSystem/TheKittySaver.AdoptionSystem.Domain/TheKittySaver.AdoptionSystem.Domain.csproj
+++ b/src/AdoptionSystem/TheKittySaver.AdoptionSystem.Domain/TheKittySaver.AdoptionSystem.Domain.csproj
@@ -26,5 +26,6 @@
     
     <ItemGroup>
       <Folder Include="Aggregates\AdoptionAnnouncementAggregate\ValueObjects\" />
+      <Folder Include="Aggregates\CatAggregate\Services\" />
     </ItemGroup>
 </Project>
