Shared VO's errors refactored

--- a/src/AdoptionSystem/TheKittySaver.AdoptionSystem.Domain/TheKittySaver.AdoptionSystem.Domain.csproj
+++ b/src/AdoptionSystem/TheKittySaver.AdoptionSystem.Domain/TheKittySaver.AdoptionSystem.Domain.csproj
@@ -23,4 +23,8 @@
         <Generator>MSBuild:GenerateCodeFromAttributes</Generator>
       </Compile>
     </ItemGroup>
+    
+    <ItemGroup>
+      <Folder Include="SharedValueObjects\AddressCompounds\" />
+    </ItemGroup>
 </Project>
