--- a/src/AdoptionSystem/TheKittySaver.AdoptionSystem.Primitives/TheKittySaver.AdoptionSystem.Primitives.csproj
+++ b/src/AdoptionSystem/TheKittySaver.AdoptionSystem.Primitives/TheKittySaver.AdoptionSystem.Primitives.csproj
@@ -1,14 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
+        <TargetFramework>net10.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="StronglyTypedId" />
+        <PackageReference Include="System.Net.Http" />
         <PackageReference Include="System.Text.Json" />
+        <PackageReference Include="System.Text.RegularExpressions" />
     </ItemGroup>
     
     <ItemGroup>
