--- a/src/AdoptionSystem/TheKittySaver.AdoptionSystem.Primitives/TheKittySaver.AdoptionSystem.Primitives.csproj
+++ b/src/AdoptionSystem/TheKittySaver.AdoptionSystem.Primitives/TheKittySaver.AdoptionSystem.Primitives.csproj
@@ -9,6 +9,8 @@
 
     <ItemGroup>
         <PackageReference Include="StronglyTypedId" />
+        <PackageReference Include="System.Net.Http" />
+        <PackageReference Include="System.Text.RegularExpressions" />
     </ItemGroup>
     
     <ItemGroup>
