--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -3,6 +3,7 @@
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
   </PropertyGroup>
   <ItemGroup>
+    <PackageVersion Include="NSubstitute" Version="5.3.0" />
     <PackageVersion Include="StronglyTypedId" Version="0.2.1" />
     <PackageVersion Include="libphonenumber-csharp" Version="9.0.19" />
     <PackageVersion Include="System.Net.Http" Version="4.3.4" />
