mvp done - no tests yet

--- a/tests/TheKittySaver.AdoptionSystem.Domain.Tests.Unit/TheKittySaver.AdoptionSystem.Domain.Tests.Unit.csproj
+++ b/tests/TheKittySaver.AdoptionSystem.Domain.Tests.Unit/TheKittySaver.AdoptionSystem.Domain.Tests.Unit.csproj
@@ -29,6 +29,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\src\AdoptionSystem\TheKittySaver.AdoptionSystem.Domain\TheKittySaver.AdoptionSystem.Domain.csproj" />
+      <ProjectReference Include="..\..\src\AdoptionSystem\TheKittySaver.AdoptionSystem.Infrastructure\TheKittySaver.AdoptionSystem.Infrastructure.csproj" />
     </ItemGroup>
 
     <ItemGroup>
