static analyzers added

--- a/tests/TheKittySaver.AdoptionSystem.Domain.Tests.Unit/TheKittySaver.AdoptionSystem.Domain.Tests.Unit.csproj
+++ b/tests/TheKittySaver.AdoptionSystem.Domain.Tests.Unit/TheKittySaver.AdoptionSystem.Domain.Tests.Unit.csproj
@@ -1,12 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
     <PropertyGroup>
         <TargetFramework>net10.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <IsPackable>false</IsPackable>
+        <NoWarn>$(NoWarn);CA1515</NoWarn>
     </PropertyGroup>
-
     <ItemGroup>
         <PackageReference Include="Bogus" />
         <PackageReference Include="coverlet.collector">
