--- a/src/AdoptionSystem/TheKittySaver.AdoptionSystem.Domain.EntityFramework/TheKittySaver.AdoptionSystem.Domain.EntityFramework.csproj
+++ b/src/AdoptionSystem/TheKittySaver.AdoptionSystem.Domain.EntityFramework/TheKittySaver.AdoptionSystem.Domain.EntityFramework.csproj
@@ -4,4 +4,9 @@
       <ProjectReference Include="..\TheKittySaver.AdoptionSystem.Domain\TheKittySaver.AdoptionSystem.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" />
+    </ItemGroup>
+
 </Project>
