--- a/src/AdoptionSystem/TheKittySaver.AdoptionSystem.ReadModels.EntityFramework/TheKittySaver.AdoptionSystem.ReadModels.EntityFramework.csproj
+++ b/src/AdoptionSystem/TheKittySaver.AdoptionSystem.ReadModels.EntityFramework/TheKittySaver.AdoptionSystem.ReadModels.EntityFramework.csproj
@@ -1,3 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TheKittySaver.AdoptionSystem.ReadModels\TheKittySaver.AdoptionSystem.ReadModels.csproj" />
+  </ItemGroup>
 </Project>
