--- a/src/AdoptionSystem/TheKittySaver.AdoptionSystem.ReadModels/TheKittySaver.AdoptionSystem.ReadModels.csproj
+++ b/src/AdoptionSystem/TheKittySaver.AdoptionSystem.ReadModels/TheKittySaver.AdoptionSystem.ReadModels.csproj
@@ -4,4 +4,9 @@
       <ProjectReference Include="..\TheKittySaver.AdoptionSystem.Primitives\TheKittySaver.AdoptionSystem.Primitives.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Analyzers" />
+    </ItemGroup>
+
 </Project>
