--- a/src/AdoptionSystem/TheKittySaver.AdoptionSystem.API/appsettings.Development.json
+++ b/src/AdoptionSystem/TheKittySaver.AdoptionSystem.API/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Database": "Server=localhost\\SQLEXPRESS;Database=TheKittySaver;Trusted_Connection=True;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
