--- a/src/AdoptionSystem/TheKittySaver.AdoptionSystem.API/appsettings.Development.json
+++ b/src/AdoptionSystem/TheKittySaver.AdoptionSystem.API/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
-  "ConnectionStrings": {
+  "ConnectionStringSettings": {
     "Database": "Server=localhost\\SQLEXPRESS;Database=TheKittySaver;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Logging": {
