--- a/src/AdoptionSystem/TheKittySaver.AdoptionSystem.Persistence/TheKittySaver.AdoptionSystem.Persistence.csproj
+++ b/src/AdoptionSystem/TheKittySaver.AdoptionSystem.Persistence/TheKittySaver.AdoptionSystem.Persistence.csproj
@@ -1,5 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
+    <PackageReference Include="FluentValidation" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design">
       <PrivateAssets>all</PrivateAssets>
@@ -9,6 +11,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TheKittySaver.AdoptionSystem.Domain.EntityFramework\TheKittySaver.AdoptionSystem.Domain.EntityFramework.csproj" />
