--- a/src/AdoptionSystem/TheKittySaver.AdoptionSystem.Persistence/TheKittySaver.AdoptionSystem.Persistence.csproj
+++ b/src/AdoptionSystem/TheKittySaver.AdoptionSystem.Persistence/TheKittySaver.AdoptionSystem.Persistence.csproj
@@ -8,6 +8,10 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" />
