--- a/src/AdoptionSystem/TheKittySaver.AdoptionSystem.Contracts/TheKittySaver.AdoptionSystem.Contracts.csproj
+++ b/src/AdoptionSystem/TheKittySaver.AdoptionSystem.Contracts/TheKittySaver.AdoptionSystem.Contracts.csproj
@@ -5,7 +5,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Aggregates\PersonAggregate\Responses\" />
+      <Folder Include="Aggregates\CatAggregate\Requests\" />
+      <Folder Include="Aggregates\CatAggregate\Responses\" />
     </ItemGroup>
 
 </Project>
