--- a/src/AdoptionSystem/TheKittySaver.AdoptionSystem.Domain/TheKittySaver.AdoptionSystem.Domain.csproj
+++ b/src/AdoptionSystem/TheKittySaver.AdoptionSystem.Domain/TheKittySaver.AdoptionSystem.Domain.csproj
@@ -19,8 +19,6 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Reference Include="Microsoft.Extensions.DependencyInjection.Abstractions">
-        <HintPath>..\..\..\..\..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\10.0.0\Microsoft.Extensions.DependencyInjection.Abstractions.dll</HintPath>
-      </Reference>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
     </ItemGroup>
 </Project>
