--- a/tests/TheKittySaver.AdoptionSystem.API.Tests.Integration/TheKittySaver.AdoptionSystem.API.Tests.Integration.csproj
+++ b/tests/TheKittySaver.AdoptionSystem.API.Tests.Integration/TheKittySaver.AdoptionSystem.API.Tests.Integration.csproj
@@ -8,11 +8,23 @@
     </PropertyGroup>
 
     <ItemGroup>
-        
+        <PackageReference Include="Bogus" />
+        <PackageReference Include="coverlet.collector" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" />
+        <PackageReference Include="Shouldly" />
+        <PackageReference Include="Testcontainers" />
+        <PackageReference Include="Testcontainers.MsSql"/>
+        <PackageReference Include="xunit" />
+        <PackageReference Include="xunit.runner.visualstudio" />
     </ItemGroup>
 
     <ItemGroup>
         <Using Include="Xunit"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\src\AdoptionSystem\TheKittySaver.AdoptionSystem.API\TheKittySaver.AdoptionSystem.API.csproj" />
     </ItemGroup>
 
 </Project>
