--- a/src/AdoptionSystem/TheKittySaver.AdoptionSystem.API/appsettings.json
+++ b/src/AdoptionSystem/TheKittySaver.AdoptionSystem.API/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStringSettings": {
     "Database": "Server=localhost\\SQLEXPRESS;Database=TheKittySaver;Trusted_Connection=True;TrustServerCertificate=True"
   },
+  "CatFileStorage": {
+    "BasePath": "./Storage"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
