--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,45 +1,51 @@
 <Project>
-    <PropertyGroup>
-        <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
-    </PropertyGroup>
-    <ItemGroup>
-        <PackageVersion Include="Asp.Versioning.Http" Version="8.1.0"/>
-        <PackageVersion Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.1.0"/>
-        <PackageVersion Include="FluentValidation" Version="12.1.1"/>
-        <PackageVersion Include="FluentValidation.DependencyInjectionExtensions" Version="12.1.1"/>
-        <PackageVersion Include="Mediator.Abstractions" Version="3.0.1"/>
-        <PackageVersion Include="Mediator.SourceGenerator" Version="3.0.1"/>
-        <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="10.0.0"/>
-        <PackageVersion Include="Microsoft.EntityFrameworkCore.Analyzers" Version="10.0.0"/>
-        <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.0"/>
-        <PackageVersion Include="Microsoft.EntityFrameworkCore.Relational" Version="10.0.0"/>
-        <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="10.0.0"/>
-        <PackageVersion Include="Microsoft.EntityFrameworkCore.Tools" Version="10.0.0"/>
-        <PackageVersion Include="Microsoft.Extensions.Configuration" Version="10.0.0"/>
-        <PackageVersion Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="10.0.0"/>
-        <PackageVersion Include="Microsoft.Extensions.Configuration.Json" Version="10.0.0"/>
-        <PackageVersion Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="10.0.0"/>
-        <PackageVersion Include="NSubstitute" Version="5.3.0"/>
-        <PackageVersion Include="libphonenumber-csharp" Version="9.0.19"/>
-        <PackageVersion Include="System.Text.Json" Version="10.0.0"/>
-        <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0"/>
-        <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.0"/>
-        <PackageVersion Include="Bogus" Version="35.6.5"/>
-        <PackageVersion Include="coverlet.collector" Version="6.0.4"/>
-        <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="18.0.1"/>
-        <PackageVersion Include="Shouldly" Version="4.3.0"/>
-        <PackageVersion Include="xunit" Version="2.9.3"/>
-        <PackageVersion Include="xunit.runner.visualstudio" Version="3.1.5"/>
-        <PackageVersion Include="SonarAnalyzer.CSharp" Version="10.16.1.129956"/>
-        <PackageVersion Include="System.Net.Http" Version="4.3.4"/>
-        <PackageVersion Include="System.Text.RegularExpressions" Version="4.3.1"/>
-        <PackageVersion Include="StronglyTypedId" Version="0.2.1"/>
-        <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="10.0.0"/>
-        <PackageVersion Include="Shouldly" Version="4.3.0" />
-        <PackageVersion Include="Testcontainers" Version="4.9.0" />
-        <PackageVersion Include="Testcontainers.MsSql" Version="4.9.0" />
-    </ItemGroup>
-    <ItemGroup>
-        <PackageReference Include="SonarAnalyzer.CSharp"/>
-    </ItemGroup>
+  <PropertyGroup>
+    <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageVersion Include="Asp.Versioning.Http" Version="8.1.0" />
+    <PackageVersion Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.1.0" />
+    <PackageVersion Include="FluentValidation" Version="12.1.1" />
+    <PackageVersion Include="FluentValidation.DependencyInjectionExtensions" Version="12.1.1" />
+    <PackageVersion Include="Mediator.Abstractions" Version="3.0.1" />
+    <PackageVersion Include="Mediator.SourceGenerator" Version="3.0.1" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="10.0.0" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Analyzers" Version="10.0.0" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.0" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Relational" Version="10.0.0" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="10.0.0" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Tools" Version="10.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.Configuration" Version="10.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="10.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.Configuration.Json" Version="10.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="10.0.0" />
+    <PackageVersion Include="NSubstitute" Version="5.3.0" />
+    <PackageVersion Include="libphonenumber-csharp" Version="9.0.19" />
+    <PackageVersion Include="Serilog.AspNetCore" Version="10.0.0" />
+    <PackageVersion Include="Serilog.Enrichers.Environment" Version="3.0.1" />
+    <PackageVersion Include="Serilog.Enrichers.Thread" Version="4.0.0" />
+    <PackageVersion Include="Serilog.Formatting.Compact" Version="3.0.0" />
+    <PackageVersion Include="Serilog.Sinks.Console" Version="6.1.1" />
+    <PackageVersion Include="Serilog.Sinks.File" Version="7.0.0" />
+    <PackageVersion Include="System.Text.Json" Version="10.0.0" />
+    <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.0" />
+    <PackageVersion Include="Bogus" Version="35.6.5" />
+    <PackageVersion Include="coverlet.collector" Version="6.0.4" />
+    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
+    <PackageVersion Include="Shouldly" Version="4.3.0" />
+    <PackageVersion Include="xunit" Version="2.9.3" />
+    <PackageVersion Include="xunit.runner.visualstudio" Version="3.1.5" />
+    <PackageVersion Include="SonarAnalyzer.CSharp" Version="10.16.1.129956" />
+    <PackageVersion Include="System.Net.Http" Version="4.3.4" />
+    <PackageVersion Include="System.Text.RegularExpressions" Version="4.3.1" />
+    <PackageVersion Include="StronglyTypedId" Version="0.2.1" />
+    <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="10.0.0" />
+    <PackageVersion Include="Shouldly" Version="4.3.0" />
+    <PackageVersion Include="Testcontainers" Version="4.9.0" />
+    <PackageVersion Include="Testcontainers.MsSql" Version="4.9.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="SonarAnalyzer.CSharp" />
+  </ItemGroup>
 </Project>
