--- a/src/AdoptionSystem/TheKittySaver.AdoptionSystem.API/appsettings.json
+++ b/src/AdoptionSystem/TheKittySaver.AdoptionSystem.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStringSettings": {
-    "Database": "Server=localhost\\SQLEXPRESS;Database=TheKittySaver;Trusted_Connection=True;TrustServerCertificate=True"
+    "Database": "Server=localhost\\SQLEXPRESS;Database=TheKittySdvaver;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "CatFileStorage": {
     "BasePath": "./Storage"
@@ -19,7 +19,7 @@
       {
         "Name": "File",
         "Args": {
-          "path": "/logs/log-.txt",
+          "path": "logs/log-.txt",
           "rollingInterval": "Day",
           "rollOnFileSizeLimit": true,
           "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
