--- a/src/AdoptionSystem/TheKittySaver.AdoptionSystem.API/Properties/launchSettings.json
+++ b/src/AdoptionSystem/TheKittySaver.AdoptionSystem.API/Properties/launchSettings.json
@@ -7,16 +7,17 @@
       "launchBrowser": false,
       "applicationUrl": "http://localhost:5024",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Local"
       }
     },
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
+      "launchBrowser": true,
+      "launchUrl": "scalar",
       "applicationUrl": "https://localhost:7157;http://localhost:5024",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Local"
       }
     }
   }
