--- a/src/AdoptionSystem/TheKittySaver.AdoptionSystem.API/TheKittySaver.AdoptionSystem.API.csproj
+++ b/src/AdoptionSystem/TheKittySaver.AdoptionSystem.API/TheKittySaver.AdoptionSystem.API.csproj
@@ -20,6 +20,7 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="Scalar.AspNetCore" />
         <PackageReference Include="Serilog.AspNetCore" />
         <PackageReference Include="Serilog.Enrichers.Environment" />
         <PackageReference Include="Serilog.Enrichers.Thread" />
@@ -28,7 +29,6 @@
         <PackageReference Include="Serilog.Sinks.File" />
         <PackageReference Include="Serilog.Enrichers.CorrelationId" />
         <PackageReference Include="AspNetCore.HealthChecks.SqlServer" />
-        <PackageReference Include="Swashbuckle.AspNetCore" />
         <PackageReference Include="Microsoft.Extensions.Http.Resilience" />
         <PackageReference Include="Microsoft.Extensions.Resilience" />
     </ItemGroup>
