ef interceptor added

--- a/.editorconfig
+++ b/.editorconfig
@@ -298,4 +298,5 @@ dotnet_diagnostic.IDE0022.severity = none
 dotnet_diagnostic.IDE0053.severity = none
 dotnet_diagnostic.IDE0046.severity = none
 dotnet_diagnostic.IDE0161.severity = none
+dotnet_diagnostic.IDE0305.severity = none
 
