refactored requests and responses of AA

--- a/src/AdoptionSystem/TheKittySaver.AdoptionSystem.API/appsettings.json
+++ b/src/AdoptionSystem/TheKittySaver.AdoptionSystem.API/appsettings.json
@@ -3,6 +3,9 @@
   "ConnectionStringSettings": {
     "Database": ""
   },
+  "Calculators": {
+    "AdoptionPriorityScoreCalculator": "Default"
+  },
   "CatFileStorage": {
     "BasePath": "./Storage"
   },
