--- a/src/AuthSystem/TheKittySaver.AuthSystem.API/TheKittySaver.AuthSystem.API.csproj
+++ b/src/AuthSystem/TheKittySaver.AuthSystem.API/TheKittySaver.AuthSystem.API.csproj
@@ -4,9 +4,16 @@
         <TargetFramework>net10.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
     
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
+    </ItemGroup>
+    
+    <ItemGroup>
+      <Content Include="..\..\..\.dockerignore">
+        <Link>.dockerignore</Link>
+      </Content>
     </ItemGroup>
 </Project>
