--- a/.github/workflows/pr-verify.yml
+++ b/.github/workflows/pr-verify.yml
@@ -18,3 +18,7 @@ jobs:
           dotnet-version: '10.0.100'
       - name: Build with dotnet
         run: dotnet build --configuration Release
+      - name: Run Unit Tests
+        run: dotnet test --configuration Release --filter "FullyQualifiedName~Tests.Unit" --no-build --logger "console;verbosity=normal"
+      - name: Run Integration Tests
+        run: dotnet test --configuration Release --filter "FullyQualifiedName~Tests.Integration" --no-build --logger "console;verbosity=normal"
