--- a/src/AdoptionSystem/TheKittySaver.AdoptionSystem.API/appsettings.Local.json
+++ b/src/AdoptionSystem/TheKittySaver.AdoptionSystem.API/appsettings.Local.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStringSettings": {
-    "Database": "Server=localhost\\SQLEXPRESS;Database=TheKittySaver;Trusted_Connection=True;TrustServerCertificate=True"
+    "Database": "Server=localhost,1434;Database=TheKittySaver;User Id=sa;Password=Haslo12345;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
