--- a/compose.yaml
+++ b/compose.yaml
@@ -1,3 +1,6 @@
+volumes:
+  thekittysaver:
+    
 services:
   sqlserver:
     image: mcr.microsoft.com/mssql/server:2025-latest
@@ -12,3 +15,5 @@ services:
       timeout: 5s
       retries: 10
       start_period: 15s
+    volumes:
+      - thekittysaver:/var/opt/mssql 
