--- a/src/AdoptionSystem/TheKittySaver.AdoptionSystem.API/Dockerfile
+++ b/src/AdoptionSystem/TheKittySaver.AdoptionSystem.API/Dockerfile
@@ -24,4 +24,7 @@ FROM mcr.microsoft.com/dotnet/aspnet:10.0
 WORKDIR /app
 EXPOSE 8080
 COPY --from=build /app/publish .
+
+USER app
+
 ENTRYPOINT ["dotnet", "TheKittySaver.AdoptionSystem.API.dll"]
