--- a/src/Frontend/TheKittySaver.Frontend/Dockerfile
+++ b/src/Frontend/TheKittySaver.Frontend/Dockerfile
@@ -15,4 +15,7 @@ FROM mcr.microsoft.com/dotnet/aspnet:10.0
 WORKDIR /app
 EXPOSE 8080
 COPY --from=build /app/publish .
+
+USER app
+
 ENTRYPOINT ["dotnet", "TheKittySaver.Frontend.dll"]
