--- a/compose.yaml
+++ b/compose.yaml
@@ -1,14 +1,19 @@
+volumes:
+  thekittysaver:
+    
 services:
   sqlserver:
     image: mcr.microsoft.com/mssql/server:2025-latest
     environment:
       - ACCEPT_EULA=Y
-      - MSSQL_SA_PASSWORD=Haslo12345
+      - MSSQL_SA_PASSWORD=${MSSQL_SA_PASSWORD}
     ports:
       - "1434:1433"
     healthcheck:
-      test: /opt/mssql-tools18/bin/sqlcmd -S localhost -U sa -P "Haslo12345" -C -Q "SELECT 1" || exit 1
+      test: /opt/mssql-tools18/bin/sqlcmd -S localhost -U sa -P "${MSSQL_SA_PASSWORD}" -C -Q "SELECT 1" || exit 1
       interval: 5s
       timeout: 5s
       retries: 10
       start_period: 15s
+    volumes:
+      - thekittysaver:/var/opt/mssql 
