cat thumbnail test added

--- a/tests/TheKittySaver.AdoptionSystem.API.Tests.Integration/TheKittySaver.AdoptionSystem.API.Tests.Integration.csproj
+++ b/tests/TheKittySaver.AdoptionSystem.API.Tests.Integration/TheKittySaver.AdoptionSystem.API.Tests.Integration.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
         <PackageReference Include="Bogus" />
+        <PackageReference Include="SkiaSharp" />
         <PackageReference Include="coverlet.collector" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" />
